--- a/javascript/exercicios_js/exercicio01_js/index.html
+++ b/javascript/exercicios_js/exercicio01_js/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript - aula 03</title>
+    <title>Javascript - exercícios</title>
 </head>
 <body>
-    <H1>Classes no Javascript</H1>
+    <H1>Lista de exercícios Javascript:</H1>
 </body>
-<script src="js-03.1.js"></script>
+<script src="js-exercicios01.js"></script>
 </html>
