--- a/javascript/exercicios_js/exercicio02_js/index.html
+++ b/javascript/exercicios_js/exercicio02_js/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript - aula 01</title>
+    <title>Javascript - exercícios</title>
 </head>
 <body>
     <H1>Lista de exercícios Javascript:</H1>
 </body>
-<script src="js-exercicios.js"></script>
+<script src="js-exercicios02.js"></script>
 </html>
