--- a/javascript/exercicios_js/exercicio02_js/index.html
+++ b/javascript/exercicios_js/exercicio02_js/index.html
@@ -8,5 +8,7 @@
 <body>
     <H1>Lista de exercícios Javascript:</H1>
 </body>
+<script src="js-exercicios01.js"></script>
+<hr>
 <script src="js-exercicios02.js"></script>
 </html>
